--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,28 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+body {
+  color: #111517;
+  background: #FFFFFF;
 }
 
-/* @media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@media (prefers-color-scheme: dark) {
+  body {
+    color: #FFFFFF;
+    background: #808080;
   }
-} 
-
-/* body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-} */
+}
 
 /*# sourceMappingURL=globals.css.map */
