--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -2,26 +2,25 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
 
-/* @media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-} 
+  $color: #111517;
+  $background-light: #FFFFFF;
+  $background-dark: #808080;
 
-/* body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-} */
+  
+  body {
+    color: $color;
+    background: $background-light
+  } 
+  
+  
+  @media (prefers-color-scheme: dark) {
+    $color: #FFFFFF;
+    $background-light: #808080;
+    $background-dark: #2B3844;
+  
+    body {
+      color: $color;
+      background: $background-light
+    }   
+  } 
