--- a/src/app/ui/card.module.css
+++ b/src/app/ui/card.module.css
@@ -1,10 +1,12 @@
 .card {
   width: 264px;
   height: 336px;
+  border-radius: 5px;
+  border: 1px solid white;
 }
-.card .card-image {
+.card .cardImage {
   height: 160;
   width: 264px;
-}
+  border-radius: 5px;
 
-/*# sourceMappingURL=card.module.css.map */
+}
