--- a/src/app/home.module.css
+++ b/src/app/home.module.css
@@ -5,7 +5,7 @@
     margin: 50px 80px;
     gap: 30px 30px;
     justify-content: center;
-    border: 2px solid rgb(236, 228, 228);
+    /* border: 2px solid rgb(236, 228, 228); */
 }
 
 .brd {
