Update fetch country criteria by alpha3Code and updated search comp. style.

--- a/src/app/[alpha3Code]/[country]/country.module.css
+++ b/src/app/[alpha3Code]/[country]/country.module.css
@@ -4,6 +4,7 @@
     width: 560px;
     height: 401px;
     position: relative;
+    overflow: hidden;
     /* border: 1px solid var(--textColor); */
     /* background-color: var(--bgLight); */
 }
