--- a/src/app/ui/search.module.css
+++ b/src/app/ui/search.module.css
@@ -3,14 +3,17 @@
     color: var(--textColor);
 }
 
+.searchContainer input {
+    background-color: inherit;
+    color: inherit;
+
+}
 .searchContainer input:focus {
     outline-style: none;
+    background-color: var(--bgLight);
+    color: var(--textColor);
+
 }
-
-.searchContainer GoSearch {
-    height: 25px;
-    width: 25px;
-    background-color: red;
-    color: greenyellow;
-
+.searchContainer input::placeholder {
+    color: var(--textColor);
 }
