--- a/src/app/[alpha3Code]/[country]/country.module.css
+++ b/src/app/[alpha3Code]/[country]/country.module.css
@@ -1,10 +1,18 @@
-.detailsMain {
+.mainContainer {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    justify-content: center;
+    column-gap: 5.5rem;
+    row-gap: 2.8rem;
+    /* border: 1px solid red; */
 }
 .imageContainer {
-    width: 560px;
-    height: 401px;
+    width: 35rem;
+    height: 25rem;
     position: relative;
-    overflow: hidden;
-    /* border: 1px solid var(--textColor); */
-    /* background-color: var(--bgLight); */
+    overflow: hidden
+}
+.textDetailsContainer {
+max-width: 30rem;
 }
