--- a/src/app/[alpha3Code]/[country]/country.module.css
+++ b/src/app/[alpha3Code]/[country]/country.module.css
@@ -16,3 +16,10 @@
 .textDetailsContainer {
 max-width: 30rem;
 }
+
+@media screen and (max-width: 600px) {
+    .imageContainer {
+        border: 1px solid var(--textColor);
+    }
+    
+}
