--- a/src/app/home.module.css
+++ b/src/app/home.module.css
@@ -1,7 +1,7 @@
 
 .main {
     width: 100%;
-    padding:3.13rem 5rem;
+    padding:3rem 5rem;
     /* border: 1px solid red; */
 }
 .cardsContainer {
@@ -21,7 +21,7 @@
     display: flex;
     flex-flow: row wrap;
     align-items: center;
-    margin: 3.13rem 0px;
+    margin: 0px 0px 3.13rem 0px;
     gap: 30px 30px;
     justify-content:space-between;
 }
@@ -34,7 +34,7 @@
     }
 
     .searchFilterContainer {
-        margin: 2rem 0px;
+        margin: 0rem 0px 2rem 0px;
     }
 
     .cardsContainer {
