Style filter component.

--- a/src/app/ui/filter.module.css
+++ b/src/app/ui/filter.module.css
@@ -1,5 +1,11 @@
-.select {
+.filter {
     background-color: var(--bgLight);
     color: var(--textColor);
     
+}
+.filter:focus, .filter:hover {
+    outline-style: none;
+}
+.filter .selected {
+    display:none;
 }
