--- a/src/app/ui/footer.module.css
+++ b/src/app/ui/footer.module.css
@@ -1,8 +1,7 @@
 .footerContainer {
-    /* position:fixed; */
+    position:fixed;
     bottom: 0px;
     z-index: 10;
-    /* background-color: var(--bgLight); */
     color: var(--textColor);
 }
 
