--- a/src/app/home.module.css
+++ b/src/app/home.module.css
@@ -2,6 +2,7 @@
 .main {
     width: 100%;
     padding:3rem 5rem;
+    padding-bottom: 8rem;
     /* border: 1px solid red; */
 }
 .cardsContainer {
@@ -30,6 +31,7 @@
     .main {
         width: 100%;
         padding:2rem 1rem;
+        padding-bottom: 6rem;
         /* border: 1px solid red; */
     }
 
